<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.timemanager.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_setAlarm"
            app:destination="@id/setAlarm" />
        <action
            android:id="@+id/action_navigation_home_to_away_phone"
            app:destination="@id/away_phone" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.timemanager.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.timemanager.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.timemanager.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <activity
        android:id="@+id/setAlarm"
        android:name="com.example.timemanager.SetAlarm"
        android:label="activity_set_alarm"
        tools:layout="@layout/activity_set_alarm" />
    <activity
        android:id="@+id/away_phone"
        android:name="com.example.timemanager.Away_phone"
        android:label="activity_away_phone"
        tools:layout="@layout/activity_away_phone" />
</navigation>