<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.awayphone.AwayPhone">

    <TextView
        android:id="@+id/focus_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/strict_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/focus" />

    <TextView
        android:id="@+id/normal_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/normal_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/normal" />

    <ImageView
        android:id="@+id/normal"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="176dp"
        android:contentDescription="@string/focus_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/b1" />

    <ImageView
        android:id="@+id/focus"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="136dp"
        android:contentDescription="@string/focus_strict"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/normal"
        app:srcCompat="@drawable/b2" />

    <TextView
        android:id="@+id/awayPhonetime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="您今天已经远离手机 x 分钟"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="156dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:text="普通模式"
        android:textColor="@color/RGB_FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/normal"
        app:layout_constraintEnd_toEndOf="@+id/normal"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/normal"
        app:layout_constraintTop_toTopOf="@+id/normal"
        app:layout_constraintVertical_bias="0.463" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="156dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:text="专注模式"
        android:textColor="@color/RGB_FFFFFF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/focus"
        app:layout_constraintEnd_toEndOf="@+id/focus"
        app:layout_constraintStart_toStartOf="@+id/focus"
        app:layout_constraintTop_toTopOf="@+id/focus" />

</androidx.constraintlayout.widget.ConstraintLayout>